--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: center;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .red {
+    color: red;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .bold {
+    font-weight: bold;
   }
-}
+  
+  .App button {
+    background-color:blue;
+    color: white;
+    font: inherit;
+    border: 1px solid blue;
+    padding: 8px;
+    cursor: pointer;
+  }
+  
+  .App button:hover {
+    background-color: lightgreen;
+    color: black;
+  }
+  
+  .App button.Red {
+    background-color: red;
+  }
+  
+  .App button.Red:hover {
+    background-color: salmon;
+  }
+
+  .App-header{
+    font-weight:bolder;
+    font-size: 100px;
+    font-style:inherit;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+  }
